--- a/src/app/user-management/components/users/user-list/user-list.component.scss
+++ b/src/app/user-management/components/users/user-list/user-list.component.scss
@@ -1,3 +1,21 @@
-.btn-delete {
-  margin-left: 8px;
+.filter {
+  background-color: var(--color-primary500);
+}
+
+.status-dot {
+  height: 8px;
+  width: 8px;
+  margin-right: 4px;
+  border-radius: 50%;
+  box-sizing: border-box;
+
+  &.active {
+    background-color: #86d166;
+    border: 1px solid #7cb802;
+  }
+
+  &.inactive {
+    background-color: #dd3d31;
+    border: 1px solid #c71a13;
+  }
 }
